added photos to gallery, attempted new layout, kept original layout

--- a/gallery2.html
+++ b/gallery2.html
@@ -22,6 +22,6 @@
       <img src="http://i.imgur.com/IKmaTqA.jpg" title="Mexican Beer at Sunset" alt="Modelo can">
     </div>
 </div>
-  <link rel="stylesheet" type="text/css" href="gallery.css">
+  <link rel="stylesheet" type="text/css" href="gallery2.css">
 </body>
 </html>
