--- a/index.html
+++ b/index.html
@@ -2,18 +2,25 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href='https://fonts.googleapis.com/css?family=Tinos' rel='stylesheet' type='text/css'>
   <title>Sarah K Shultis</title>
 
 </head>
 <body>
   <header>
   </header>
+
   <ul>
   <li><a href="index.html">Home</a></li>
   <li><a href="gallery.html">Art</a></li>
   <li><a href="portfolio.html">Portfolio</a></li>
   <li><a href="about.html">About</a></li>
   </ul>
+
+  <div id="name">
+    <p>Sarah K Shultis</p>
+  </div>
+
   <link rel="stylesheet" type="text/css" href="style.css">
 </body>
 </html>
