added photos to gallery, added legible name to homepage

--- a/gallery.html
+++ b/gallery.html
@@ -14,12 +14,16 @@
   </ul>
   <div class="gallery">
     <div class="thumbnail">
-      <img src="http://i.imgur.com/FLFmIWw.jpg" title="Georgian Light" alt="stonework">
+
       <img src="http://i.imgur.com/aNenJak.jpg" title="Lapota Sunset" alt="sunset">
-      <img src="http://i.imgur.com/mu4MI3E.jpg" title="Rockbridge November" alt="suspension bridge">
+
       <img src="http://i.imgur.com/iOZQOrv.jpg" title="Orchids and Light" alt="orchid">
+      <img src="http://i.imgur.com/mu4MI3E.jpg" title="Rockbridge November" alt="suspension bridge">
       <img src="http://i.imgur.com/LURXdqL.jpg" title="Sunset at Tilden" alt="city sunset">
-      <img src="http://i.imgur.com/IKmaTqA.jpg" title="Mexican Beer at Sunset" alt="Modelo can">
+      <img src="http://i.imgur.com/e4grA3R.jpg" title="Elizabethan Soundside" alt="gate">
+      <img src="http://i.imgur.com/FLFmIWw.jpg" title="Georgian Light" alt="stonework">
+      <img src="http://i.imgur.com/IKmaTqA.jpg" title="Soundside Sunset" alt="Modelo can">
+
     </div>
 </div>
   <link rel="stylesheet" type="text/css" href="gallery.css">
