--- a/index.html
+++ b/index.html
@@ -7,20 +7,23 @@
 
 </head>
 <body>
+  <!--Why did you create an unused header element?  -->
   <header>
   </header>
 
   <ul>
+    <!--the li tags here should be indented inside the ul  -->
   <li><a href="index.html">Home</a></li>
   <li><a href="gallery.html">Art</a></li>
   <li><a href="portfolio.html">Portfolio</a></li>
   <li><a href="about.html">About</a></li>
   </ul>
 
+<!--Don't really need to create a div here unless you're planning to add more elements  -->
   <div id="name">
     <p>Sarah K Shultis</p>
   </div>
-
+<!-- Stylesheets should be in the head. JS before the closing body tag  -->
   <link rel="stylesheet" type="text/css" href="style.css">
 </body>
 </html>
