--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.8.6/jquery.fullPage.js"></script>
   <script src="https://use.fontawesome.com/8c729369f0.js"></script>
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Lato|Montserrat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Quattrocento|Pavanam" rel="stylesheet">
 </head>
 <body>
 
   <ul id="myMenu">
     <li data-menuanchor="welcome" class="active"><a href="#welcome">Sarah K</a></li>
-    <li data-menuanchor="about"><a href="#about">About</a></li>
-    <li data-menuanchor="projects"><a href="#projects">Projects</a></li>
-    <li data-menuanchor="contact"><a href="#contact">Contact</a></li>
+    <li data-menuanchor="about"><a href="#about">ABOUT</a></li>
+    <li data-menuanchor="projects"><a href="#projects">PROJECTS</a></li>
+    <li data-menuanchor="contact"><a href="#contact">CONTACT</a></li>
   </ul>
 
   <div id="fullpage">
-    <div class="section" data-menuanchor="welcome" id="seaSection">
+    <div class="section" data-menuanchor="welcome" id="home">
       <div id="wrapper">
         <h1>Hi. I'm Sarah.</h1>
-        <h5>A Web developer, an economist, and data lover.</h5>
+        <h5>Web developer, economist, and data lover.</h5>
       </div>
     </div>
 
@@ -47,24 +47,33 @@
         </div>
       </div>
 
-      <div class="slide" data-anchor="LRN-Quiz">
+      <div class="slide" data-anchor="dcCrimeMapper">
+        <div id="wrapper">
+          <h3>dcCrimeMapper</h3>
+          <img class="laptop" src="http://i.imgur.com/IybalBf.png" alt="crimemap">
+          <p class="projectBody">dcCrimeMapper is the beginning of an analytical app that maps recent violent crime in Washington, DC. In its current state, it shows times and locations of violent crimes that have occurred in the last 30 days, populated by the District of Columbia Open Data API. The app's future is to be a crime analytical tool, used to evaluate the relationships of criminal activity and local events like festivals, federal holidays, and major weather events. CrimeMappr took me back to my roots cleaning data with Excel, and was my first foray into scraping with Python.</p>
+          <p class="projectBody"><span id="slate"><a href="#"> Launch the app </a></p>
+        </div>
+      </div>
+
+      <div class="slide" data-anchor="KardashBash">
         <div id="wrapper">
           <h3>KardashBash</h3>
           <img class="laptop" src="http://i.imgur.com/eXN3ktI.png" alt="Kardashian App">
-          <p class="projectBody">For this ruby on rails project, I created an entertainment app around the public's need to voice its frustration and disgust with the Kardashian family and their growing entourage. Don't take it too seriously.</p>
+          <p class="projectBody">For this ruby on rails project, I created an entertainment app around the public's need to voice its frustration and disgust with the Kardashian family and their growing entourage.</p>
           <p class="projectBody"><span id="slate"><a href="https://kardash-bash.herokuapp.com/"> Launch the app </a></p>
         </div>
       </div>
 
-      <div class="slide" data-anchor="ComingSoon">
+      <div class="slide" data-anchor="more">
         <div id="wrapper">
           <h3>There's more to come!</h3>
-          <p class="centered">I'm always generating new ideas and refactoring current projects. Check back soon for my latest work.</p>
+          <p class="centered">I'm always generating new ideas and refactoring my projects. Check back soon for my latest work.</p>
         </div>
       </div>
     </div>
 
-    <div class="section" data-menuanchor="contact">
+    <div class="section" data-menuanchor="contact" id="greentea">
       <div id="wrapper">
       <h1>Find me:</h1>
       <p></p>
