added link to resume, need to add pdf to repo

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <h3>dcCrimeMapper</h3>
           <img class="laptop" src="http://i.imgur.com/IybalBf.png" alt="crimemap">
           <p class="projectBody">dcCrimeMapper is the beginning of an analytical app that maps recent violent crime in Washington, DC. In its current state, it shows times and locations of violent crimes that have occurred in the last 30 days, populated by the District of Columbia Open Data API. The app's future is to be a crime analytical tool, used to evaluate the relationships of criminal activity and local events like festivals, federal holidays, and major weather events. CrimeMappr took me back to my roots cleaning data with Excel, and was my first foray into scraping with Python.</p>
-          <p class="projectBody"><span id="slate"><a href="#"> Launch the app </a></p>
+          <p class="projectBody"><span id="launch"><a href="#"> Launch the app </a></p>
         </div>
       </div>
 
@@ -61,7 +61,7 @@
           <h3>KardashBash</h3>
           <img class="laptop" src="http://i.imgur.com/eXN3ktI.png" alt="Kardashian App">
           <p class="projectBody">For this ruby on rails project, I created an entertainment app around the public's need to voice its frustration and disgust with the Kardashian family and their growing entourage.</p>
-          <p class="projectBody"><span id="slate"><a href="https://kardash-bash.herokuapp.com/"> Launch the app </a></p>
+          <p class="projectBody"><span id="launch"><a href="https://kardash-bash.herokuapp.com/"> Launch the app </a></p>
         </div>
       </div>
 
@@ -78,6 +78,12 @@
       <h1>Find me:</h1>
       <p></p>
         <div class="contactIcons">
+          <a href="https://www.linkedin.com/in/sarahkshultis">
+            <span class="fa-stack fa-2x">
+              <i class="fa fa-circle-thin fa-stack-2x"></i>
+              <i class="fa fa-file-text-o fa-stack-1x"></i>
+            </span>
+          </a>
           <a href="mailto:shultis.sk@gmail.com?subject= what's new?">
             <span class="fa-stack fa-2x">
               <i class="fa fa-circle-thin fa-stack-2x"></i>
