--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <h1>Find me:</h1>
       <p></p>
         <div class="contactIcons">
-          <a href="https://www.linkedin.com/in/sarahkshultis">
+          <a href="SarahShultisResume.pdf">
             <span class="fa-stack fa-2x">
               <i class="fa fa-circle-thin fa-stack-2x"></i>
               <i class="fa fa-file-text-o fa-stack-1x"></i>
