changed links on find me page

--- a/index.html
+++ b/index.html
@@ -80,26 +80,22 @@
         <div class="contactIcons">
           <a href="SarahShultisResume.pdf">
             <span class="fa-stack fa-2x">
-              <i class="fa fa-circle-thin fa-stack-2x"></i>
               <i class="fa fa-file-text-o fa-stack-1x"></i>
-            </span>
-          </a>
-          <a href="mailto:shultis.sk@gmail.com?subject= what's new?">
-            <span class="fa-stack fa-2x">
-              <i class="fa fa-circle-thin fa-stack-2x"></i>
-              <i class="fa fa-envelope-o fa-stack-1x"></i>
-            </span>
-          </a>
-          <a href="https://www.linkedin.com/in/sarahkshultis">
-            <span class="fa-stack fa-2x">
-              <i class="fa fa-circle-thin fa-stack-2x"></i>
-              <i class="fa fa-linkedin fa-stack-1x"></i>
             </span>
           </a>
           <a href="https://github.com/skshultis">
             <span class="fa-stack fa-2x">
-              <i class="fa fa-circle-thin fa-stack-2x"></i>
               <i class="fa fa-github fa-stack-1x"></i>
+            </span>
+          </a>
+          <a href="https://www.linkedin.com/in/sarahkshultis">
+            <span class="fa-stack fa-2x">
+              <i class="fa fa-linkedin-square fa-stack-1x"></i>
+            </span>
+          </a>
+          <a href="mailto:shultis.sk@gmail.com?subject= what's new?">
+            <span class="fa-stack fa-2x">
+              <i class="fa fa-envelope-o fa-stack-1x"></i>
             </span>
           </a>
         </div>
