target blank on links

--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@
       <h1>Find me:</h1>
       <p></p>
         <div class="contactIcons">
-          <a href="SarahShultisResume.pdf">
+          <a href="SarahShultisResume.pdf" target="_blank">
             <span class="fa-stack fa-2x">
               <i class="fa fa-file-text-o fa-stack-1x"></i>
             </span>
           </a>
-          <a href="https://github.com/skshultis">
+          <a href="https://github.com/skshultis" target="_blank">
             <span class="fa-stack fa-2x">
               <i class="fa fa-github fa-stack-1x"></i>
             </span>
           </a>
-          <a href="https://www.linkedin.com/in/sarahkshultis">
+          <a href="https://www.linkedin.com/in/sarahkshultis" target="_blank">
             <span class="fa-stack fa-2x">
               <i class="fa fa-linkedin-square fa-stack-1x"></i>
             </span>
