added about me, some style to p

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 <body>
 
   <ul id="myMenu">
-    <li data-menuanchor="welcome" class="active"><a href="#welcome">Sarah K</a></li>
+    <li data-menuanchor="main" class="active"><a href="#main">Sarah K</a></li>
     <li data-menuanchor="about"><a href="#about">ABOUT</a></li>
     <li data-menuanchor="projects"><a href="#projects">PROJECTS</a></li>
-    <li data-menuanchor="contact"><a href="#contact">CONTACT</a></li>
+    <li data-menuanchor="contactme"><a href="#contactme">CONTACT</a></li>
   </ul>
 
   <div id="fullpage">
-    <div class="section" data-menuanchor="welcome" id="home">
+    <div class="section" data-menuanchor="main" id="home">
       <div id="wrapper">
         <h1>Hi. I'm Sarah.</h1>
         <h5>Web developer, economist, and data lover.</h5>
@@ -31,12 +31,13 @@
     <div class="section" data-menuanchor="about">
       <h1>About me:</h1>
       <div id="aboutBody">
-        <div id="columnContainer">
-          <p id="column1"></p>
-          <p id="column2"></p>
-        </div>
+        <!-- <div id="columnContainer"> -->
+          <p class="sarah">I'm an aspiring data scientist who fell in love with statistics during my undergraduate studies as an Economics major. After a string of jobs that were sometimes fun, often monotonous, and usually intellectually unsatisfying, I realized that I needed to overhaul my career and looked to web development and General Assembly. Since then, I've been reunited with my passion for data and analysis - I love answering questions with numbers and statistical results.</p>
+          <!-- <p id="column1"></p>
+          <p id="column2"></p> -->
+        <!-- </div> -->
       </div>
-      <h5 id="clearColumns"><a href="#contact">Want to get in touch?</a></h5>
+      <h5 id="clearColumns"><a href="#contactme">Want to get in touch?</a></h5>
     </div>
 
     <div class="section" data-menuanchor="projects">
@@ -73,7 +74,7 @@
       </div>
     </div>
 
-    <div class="section" data-menuanchor="contact" id="greentea">
+    <div class="section" data-menuanchor="contactme" id="greentea">
       <div id="wrapper">
       <h1>Find me:</h1>
       <p></p>
