--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <h3>dcCrimeMapper</h3>
           <img class="laptop" src="http://i.imgur.com/IybalBf.png" alt="crimemap">
           <p class="projectBody">dcCrimeMapper is the beginning of an analytical app that maps recent violent crime in Washington, DC. In its current state, it shows times and locations of violent crimes that have occurred in the last 30 days, populated by the District of Columbia Open Data API. The app's future is to be a crime analytical tool, used to evaluate the relationships of criminal activity and local events like festivals, federal holidays, and major weather events. CrimeMappr took me back to my roots cleaning data with Excel, and was my first foray into scraping with Python.</p>
-          <p class="projectBody"><span id="launch"><a href="#"> Launch the app </a></p>
+          <p class="projectBody"><span id="launch"><a href="https://github.com/skshultis/dcCrimeMapper"> View the repository </a></p>
         </div>
       </div>
 
