--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <h1>About me:</h1>
       <div id="aboutBody">
         <!-- <div id="columnContainer"> -->
-          <p class="sarah">I'm an aspiring data scientist who fell in love with statistics during my undergraduate studies as an Economics major. After a string of jobs that were sometimes fun, often monotonous, and usually intellectually unsatisfying, I realized that I needed to overhaul my career and looked to web development and General Assembly. Since then, I've been reunited with my passion for data and analysis - I love answering questions with numbers and statistical results.</p>
+          <p class="sarah">I'm a developer and an aspiring data scientist who fell in love with statistics during my undergraduate studies as an Economics major. After a string of jobs that were sometimes fun, often monotonous, and usually intellectually unsatisfying, I realized that I needed a change, and looked to web development and General Assembly. Since then, I've been reunited with my passion for data and analysis and learned that I love databases and back-end development.</p>
           <!-- <p id="column1"></p>
           <p id="column2"></p> -->
         <!-- </div> -->
