--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="section" data-menuanchor="main" id="home">
       <div id="wrapper">
         <h1>Hi. I'm Sarah.</h1>
-        <h5>Web developer, economist, and data lover.</h5>
+        <h5>Web developer, econophile, and data lover.</h5>
       </div>
     </div>
 
